post-service/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: posts-service-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: posts-service
  template:
    metadata:
      labels:
        app: posts-service
    spec:
      containers:
      - name: posts-service
        image: posts-service:latest
        imagePullPolicy: Never
        ports:
        - containerPort: 5000
        resources:
          requests:
            memory: "64Mi"
            cpu: "100m"
          limits:
            memory: "128Mi"
            cpu: "250m"
